# hvit

./: pyproject.toml  setup.py
src/hvit/: __init__.py  trainer.py  utils.py
src/hvit/data/: __init__.py  datasets.py
src/hvit/model/: __init__.py  blocks.py  hvit.py  hvit_light.py  transformation.py
src/hvit/scripts/: __init__.py  main.py
