[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hvit"
version = "0.1.0"
description = "A Hierarchical Vision Transformer for Deformable Image Registration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops",
    "timm",
    "lightning",
    "wandb",
    "monai",
    "gitpython",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
torch = [
    "torch>=1.12.0",
    "torchvision",
    "torchaudio",
]

[project.urls]
"Homepage" = "https://github.com/mogvision/hvit"
"Paper" = "https://openaccess.thecvf.com/content/CVPR2024/html/Ghahremani_H-ViT_A_Hierarchical_Vision_Transformer_for_Deformable_Image_Registration_CVPR_2024_paper.html"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hvit", "hvit.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

